Creacion de la gestion de multimedia y creacion de el control de ordenes para el mesero
